kubernetes/longhorn/longhorn-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.int.bollingnet.net`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
      secretName: tls-longhorn-dashboard # Must match spec.secretName in longhorn-dashboard-certificate.yaml
